# quadcopter_project

src/quadcopter_interfaces/: CMakeLists.txt  package.xml
src/quadcopter_interfaces/srv/: FindPath.srv  GetGrid.srv
src/quadcopter_project/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/quadcopter_project/quadcopter_project/: grid_config_service_node.py  motor_control_node.py  pathfinding_serice_node.py
src/quadcopter_project/srv/: FindPath.srv  GetGrid.srv
