<?xml version="1.0"?>
<package format="3">
  <name>quadcopter_project</name>
  <version>0.0.0</version>
  <description>Quadcopter navigation project using ROS 2</description>

  <maintainer email="your_email@example.com">rosdev</maintainer>

  <license>Apache License 2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
